# ha-advanced-automation

./: .gitignore  Dockerfile  README.md  config.yaml
backend/: Cargo.toml  askama.toml  blocks.json  watch.sh
backend/.cargo/: config.toml
backend/blocks/actions/: ha_call_service.yaml  ha_set_state.yaml  ha_trigger_action.yaml
backend/blocks/builtin/logic/: controls_if.rhai  logic_compare.rhai
backend/blocks/builtin/math/: math_arithmetic.rhai  math_number.rhai
backend/blocks/builtin/variables/: variables_get.rhai  variables_set.rhai
backend/blocks/conditions/: ha_state_condition.yaml  ha_time_condition.yaml
backend/blocks/custom/: logic_operation.yaml
backend/blocks/lists/: lists_create_with.yaml  lists_getIndex.yaml  lists_getSublist.yaml  lists_indexOf.yaml  lists_isEmpty.yaml  lists_length.yaml  lists_repeat.yaml  lists_reverse.yaml  lists_setIndex.yaml  lists_sort.yaml
backend/blocks/logic/: controls_if.yaml  logic_boolean.yaml  logic_compare.yaml  logic_negate.yaml  logic_operation.yaml  logic_ternary.yaml
backend/blocks/loops/: controls_flow_statements.yaml  controls_for.yaml  controls_forEach.yaml  controls_repeat_ext.yaml  controls_whileUntil.yaml
backend/blocks/math/: math_arithmetic.yaml  math_constant.yaml  math_constrain.yaml  math_modulo.yaml  math_number.yaml  math_number_property.yaml  math_on_list.yaml  math_random_float.yaml  math_random_int.yaml  math_round.yaml  math_single.yaml
backend/blocks/text/: text.yaml  text_append.yaml  text_changeCase.yaml  text_charAt.yaml  text_getSubstring.yaml  text_indexOf.yaml  text_isEmpty.yaml  text_join.yaml  text_length.yaml  text_multiline.yaml  text_print.yaml  text_prompt_ext.yaml  text_trim.yaml
backend/blocks/triggers/: ha_state_trigger.yaml  ha_time_trigger.yaml
backend/schemas/: block.json
backend/src/: automation.rs  blockly.rs  blocks.rs  ha_client.rs  main.rs
backend/src/codegen/: generator.rs  mod.rs  template.rs
backend/src/rhai/: bindings.rs  engine.rs  mod.rs
backend/src/tests/: automation_tests.rs  mod.rs
backend/src/web/: filters.rs  mod.rs  routes.rs
backend/static/: asset-manifest.json  index.html
backend/static/static/css/: main.1e75de43.css  main.1e75de43.css.map
backend/static/static/js/: main.ec53fbc6.js  main.ec53fbc6.js.map
backend/templates/: base.html
backend/templates/automations/: create.html  edit.html  list.html
(+62 files in other folders)
