[package]
name = "ha-advanced-automation"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = { version = "0.12", features = ["with-axum", "serde-json"] }
askama_axum = "0.4"
rhai = { version = "1.16", features = ["sync", "serde"] }
handlebars = "5.1"
axum = { version = "0.8", features = ["macros", "ws"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
tokio-tungstenite = "0.26"
futures = "0.3"
async-trait = "0.1"
reqwest = { version = "0.12", features = [
    "json",
    "rustls-tls",
], default-features = false }
dotenv = "0.15"
uuid = { version = "1.13", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.5.0"
log = "0.4.26"
rustyscript = "0.11.0"

[dev-dependencies]
tempfile = "3.16.0"
